// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Given we wish to allocte cases from an Interviewer to an Editor should render the allocation page correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
        data-testid="allocation-page-panel"
      >
        <div
          class="ons-panel__body "
        >
          Allocate cases from an interviewer to an editor. All cases conducted by that interviewer will be allocated to the editor
        </div>
      </div>
      <br />
      <h3>
        FRS2504A
      </h3>
      <div>
        <label
          class="ons-label"
          for="select-from"
        >
          Allocate cases from interviewer
           
        </label>
        <select
          class="ons-input "
          data-testid="select-from"
          id="select-from"
          name="select"
        >
          <option
            data-testid="select-select-from"
            disabled=""
            selected=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="option-select-from-bob"
            value="bob"
          >
            bob (2 case(s))
          </option>
          <option
            data-testid="option-select-from-jamester"
            value="jamester"
          >
            jamester (1 case(s))
          </option>
        </select>
      </div>
      <div>
        <label
          class="ons-label"
          for="select-to"
        >
          To editor
           
        </label>
        <select
          class="ons-input "
          data-testid="select-to"
          id="select-to"
          name="select"
        >
          <option
            data-testid="select-select-to"
            disabled=""
            selected=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="option-select-to-Dave"
            value="Dave"
          >
            Dave (0 case(s))
          </option>
          <option
            data-testid="option-select-to-Jake"
            value="Jake"
          >
            Jake (2 case(s))
          </option>
          <option
            data-testid="option-select-to-Rich"
            value="Rich"
          >
            Rich (0 case(s))
          </option>
        </select>
      </div>
      <div>
        <label
          class="ons-label"
          for="number-of-cases"
        >
          Number of cases
           
        </label>
        <select
          class="ons-input "
          data-testid="number-of-cases"
          id="number-of-cases"
          name="select"
        >
          <option
            data-testid="select-number-of-cases"
            disabled=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="option-number-of-cases--1"
            selected=""
            value="-1"
          >
            All
          </option>
          <option
            data-testid="option-number-of-cases-50"
            value="50"
          >
            50
          </option>
          <option
            data-testid="option-number-of-cases-25"
            value="25"
          >
            25
          </option>
          <option
            data-testid="option-number-of-cases-10"
            value="10"
          >
            10
          </option>
          <option
            data-testid="option-number-of-cases-5"
            value="5"
          >
            5
          </option>
          <option
            data-testid="option-number-of-cases-1"
            value="1"
          >
            1
          </option>
        </select>
      </div>
      <br />
      <button
        class="ons-btn "
        data-testid="button"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          Allocate
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      data-testid="allocation-page-panel"
    >
      <div
        class="ons-panel__body "
      >
        Allocate cases from an interviewer to an editor. All cases conducted by that interviewer will be allocated to the editor
      </div>
    </div>
    <br />
    <h3>
      FRS2504A
    </h3>
    <div>
      <label
        class="ons-label"
        for="select-from"
      >
        Allocate cases from interviewer
         
      </label>
      <select
        class="ons-input "
        data-testid="select-from"
        id="select-from"
        name="select"
      >
        <option
          data-testid="select-select-from"
          disabled=""
          selected=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="option-select-from-bob"
          value="bob"
        >
          bob (2 case(s))
        </option>
        <option
          data-testid="option-select-from-jamester"
          value="jamester"
        >
          jamester (1 case(s))
        </option>
      </select>
    </div>
    <div>
      <label
        class="ons-label"
        for="select-to"
      >
        To editor
         
      </label>
      <select
        class="ons-input "
        data-testid="select-to"
        id="select-to"
        name="select"
      >
        <option
          data-testid="select-select-to"
          disabled=""
          selected=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="option-select-to-Dave"
          value="Dave"
        >
          Dave (0 case(s))
        </option>
        <option
          data-testid="option-select-to-Jake"
          value="Jake"
        >
          Jake (2 case(s))
        </option>
        <option
          data-testid="option-select-to-Rich"
          value="Rich"
        >
          Rich (0 case(s))
        </option>
      </select>
    </div>
    <div>
      <label
        class="ons-label"
        for="number-of-cases"
      >
        Number of cases
         
      </label>
      <select
        class="ons-input "
        data-testid="number-of-cases"
        id="number-of-cases"
        name="select"
      >
        <option
          data-testid="select-number-of-cases"
          disabled=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="option-number-of-cases--1"
          selected=""
          value="-1"
        >
          All
        </option>
        <option
          data-testid="option-number-of-cases-50"
          value="50"
        >
          50
        </option>
        <option
          data-testid="option-number-of-cases-25"
          value="25"
        >
          25
        </option>
        <option
          data-testid="option-number-of-cases-10"
          value="10"
        >
          10
        </option>
        <option
          data-testid="option-number-of-cases-5"
          value="5"
        >
          5
        </option>
        <option
          data-testid="option-number-of-cases-1"
          value="1"
        >
          1
        </option>
      </select>
    </div>
    <br />
    <button
      class="ons-btn "
      data-testid="button"
      type="button"
    >
      <span
        class="ons-btn__inner"
      >
        Allocate
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Given we wish to reallocte cases from an Editor to another Editor should render the allocation page correctly 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
        data-testid="allocation-page-panel"
      >
        <div
          class="ons-panel__body "
        >
          Reallocate cases from one editor to another editor. All non-completed cases will be transfered
        </div>
      </div>
      <br />
      <h3>
        FRS2504A
      </h3>
      <div>
        <label
          class="ons-label"
          for="select-from"
        >
          Reallocate cases from editor
           
        </label>
        <select
          class="ons-input "
          data-testid="select-from"
          id="select-from"
          name="select"
        >
          <option
            data-testid="select-select-from"
            disabled=""
            selected=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="option-select-from-Dave"
            value="Dave"
          >
            Dave (0 case(s))
          </option>
          <option
            data-testid="option-select-from-Jake"
            value="Jake"
          >
            Jake (2 case(s))
          </option>
          <option
            data-testid="option-select-from-Rich"
            value="Rich"
          >
            Rich (0 case(s))
          </option>
        </select>
      </div>
      <div>
        <label
          class="ons-label"
          for="select-to"
        >
          To editor
           
        </label>
        <select
          class="ons-input "
          data-testid="select-to"
          id="select-to"
          name="select"
        >
          <option
            data-testid="select-select-to"
            disabled=""
            selected=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="option-select-to-Dave"
            value="Dave"
          >
            Dave (0 case(s))
          </option>
          <option
            data-testid="option-select-to-Jake"
            value="Jake"
          >
            Jake (2 case(s))
          </option>
          <option
            data-testid="option-select-to-Rich"
            value="Rich"
          >
            Rich (0 case(s))
          </option>
        </select>
      </div>
      <div>
        <label
          class="ons-label"
          for="number-of-cases"
        >
          Number of cases
           
        </label>
        <select
          class="ons-input "
          data-testid="number-of-cases"
          id="number-of-cases"
          name="select"
        >
          <option
            data-testid="select-number-of-cases"
            disabled=""
            value=""
          >
            Select an option
          </option>
          <option
            data-testid="option-number-of-cases--1"
            selected=""
            value="-1"
          >
            All
          </option>
          <option
            data-testid="option-number-of-cases-50"
            value="50"
          >
            50
          </option>
          <option
            data-testid="option-number-of-cases-25"
            value="25"
          >
            25
          </option>
          <option
            data-testid="option-number-of-cases-10"
            value="10"
          >
            10
          </option>
          <option
            data-testid="option-number-of-cases-5"
            value="5"
          >
            5
          </option>
          <option
            data-testid="option-number-of-cases-1"
            value="1"
          >
            1
          </option>
        </select>
      </div>
      <br />
      <button
        class="ons-btn "
        data-testid="button"
        type="button"
      >
        <span
          class="ons-btn__inner"
        >
          Reallocate
        </span>
      </button>
    </div>
  </body>,
  "container": <div>
    <div
      class="ons-panel ons-panel--info ons-panel--no-title  ons-u-mt-m"
      data-testid="allocation-page-panel"
    >
      <div
        class="ons-panel__body "
      >
        Reallocate cases from one editor to another editor. All non-completed cases will be transfered
      </div>
    </div>
    <br />
    <h3>
      FRS2504A
    </h3>
    <div>
      <label
        class="ons-label"
        for="select-from"
      >
        Reallocate cases from editor
         
      </label>
      <select
        class="ons-input "
        data-testid="select-from"
        id="select-from"
        name="select"
      >
        <option
          data-testid="select-select-from"
          disabled=""
          selected=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="option-select-from-Dave"
          value="Dave"
        >
          Dave (0 case(s))
        </option>
        <option
          data-testid="option-select-from-Jake"
          value="Jake"
        >
          Jake (2 case(s))
        </option>
        <option
          data-testid="option-select-from-Rich"
          value="Rich"
        >
          Rich (0 case(s))
        </option>
      </select>
    </div>
    <div>
      <label
        class="ons-label"
        for="select-to"
      >
        To editor
         
      </label>
      <select
        class="ons-input "
        data-testid="select-to"
        id="select-to"
        name="select"
      >
        <option
          data-testid="select-select-to"
          disabled=""
          selected=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="option-select-to-Dave"
          value="Dave"
        >
          Dave (0 case(s))
        </option>
        <option
          data-testid="option-select-to-Jake"
          value="Jake"
        >
          Jake (2 case(s))
        </option>
        <option
          data-testid="option-select-to-Rich"
          value="Rich"
        >
          Rich (0 case(s))
        </option>
      </select>
    </div>
    <div>
      <label
        class="ons-label"
        for="number-of-cases"
      >
        Number of cases
         
      </label>
      <select
        class="ons-input "
        data-testid="number-of-cases"
        id="number-of-cases"
        name="select"
      >
        <option
          data-testid="select-number-of-cases"
          disabled=""
          value=""
        >
          Select an option
        </option>
        <option
          data-testid="option-number-of-cases--1"
          selected=""
          value="-1"
        >
          All
        </option>
        <option
          data-testid="option-number-of-cases-50"
          value="50"
        >
          50
        </option>
        <option
          data-testid="option-number-of-cases-25"
          value="25"
        >
          25
        </option>
        <option
          data-testid="option-number-of-cases-10"
          value="10"
        >
          10
        </option>
        <option
          data-testid="option-number-of-cases-5"
          value="5"
        >
          5
        </option>
        <option
          data-testid="option-number-of-cases-1"
          value="1"
        >
          1
        </option>
      </select>
    </div>
    <br />
    <button
      class="ons-btn "
      data-testid="button"
      type="button"
    >
      <span
        class="ons-btn__inner"
      >
        Reallocate
      </span>
    </button>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
